# ai_noter

./: README.md  ai_noter.py  pyproject.toml  requirements.txt  utils.py
pasted_notes/: ai_noter_chat.py  ai_noterp.py
