[project]
name = "ai-noter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "ctranslate2==4.4.0",
    "faster-whisper>=1.2.1",
    "google-generativeai>=0.8.6",
    "ollama>=0.6.2",
    "yt-dlp>=2026.7.4",
]
